--- a/public/index.html
+++ b/public/index.html
@@ -12,19 +12,19 @@
     <title>NODECONF BR 2016</title>
 
     <!-- Bootstrap Core CSS -->
-    <link rel="stylesheet" href="/assets/css/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css" type="text/css">
 
     <!-- Custom Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="/assets/font-awesome/css/font-awesome.min.css" type="text/css">
-    <link rel="stylesheet" href="/assets/css/ss-standard.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.min.css" type="text/css">
+    <link rel="stylesheet" href="assets/css/ss-standard.css" media="screen" title="no title" charset="utf-8">
     <link rel="icon" type="image/png" href="img/Mask.png">
     <!-- Plugin CSS -->
-    <link rel="stylesheet" href="/assets/css/animate.min.css" type="text/css">
+    <link rel="stylesheet" href="assets/css/animate.min.css" type="text/css">
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="/assets/css/creative.css" type="text/css">
+    <link rel="stylesheet" href="assets/css/creative.css" type="text/css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -50,13 +50,13 @@
                 <div class="social">
                     <ul>
                         <li>
-                            <a href="https://www.facebook.com/brnode" target="_blank"><img src="/assets/img/fb.svg" alt="facebook" /></a>
+                            <a href="https://www.facebook.com/brnode" target="_blank"><img src="assets/img/fb.svg" alt="facebook" /></a>
                         </li>
                         <li>
-                            <a href="https://twitter.com/nodebr" target="_blank"><img src="/assets/img/twitter.svg" alt="github" /></a>
+                            <a href="https://twitter.com/nodebr" target="_blank"><img src="assets/img/twitter.svg" alt="github" /></a>
                         </li>
                         <li>
-                            <a href="https://github.com/nodeconf/brazil" target="_blank"><img src="/assets/img/github.svg" alt="github" /></a>
+                            <a href="https://github.com/nodeconf/brazil" target="_blank"><img src="assets/img/github.svg" alt="github" /></a>
                         </li>
                     </ul>
                 </div>
@@ -100,7 +100,7 @@
             <div class="header-content-inner">
                 <div class="row">
                     <div class="col-md-3 text-right">
-                        <img src="/assets/img/logonovo.svg" alt="Logo NodeConf Brazil" class="logo" width="100px" />
+                        <img src="assets/img/logonovo.svg" alt="Logo NodeConf Brazil" class="logo" width="100px" />
                     </div>
                     <div class="col-md-9">
                         <p class="event-title">NODECONF<span>BRAZIL</span>2016</p>
@@ -144,7 +144,7 @@
                         <h2>
                     2 Dias de <mark>Evento AO VIVO exclusivo</mark> com os maiores Experts em Node.js do mundo <mark>pela primeira vez no Brasil</mark>
                   </h2>
-                        <a href="http://www.eventick.com.br/nodeconfbr" target="_blank" class="btn btn-danger btn-xl"><img src="/assets/img/ticket.svg" alt="" class="ticket" /> {{ $t('page.buy_tickets_now') }}</a>
+                        <a href="http://www.eventick.com.br/nodeconfbr" target="_blank" class="btn btn-danger btn-xl"><img src="assets/img/ticket.svg" alt="" class="ticket" /> {{ $t('page.buy_tickets_now') }}</a>
                         <p>VAGAS LIMITADAS</p>
                         <p><span class="ss-calendar"></span><span>{{ $t('page.date') }}</span> <span class="ss-location"></span><span>{{ $t('page.location') }}</span></p>
                         <p id="translate" class="sliding-middle-out pointer" v-on:click.prevent="toggleLocale()">{{ $t('page.read_in_locale') }}</p>
@@ -158,7 +158,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 col-xs-12">
-                    <img src="/assets/img/ilustra.svg" alt="Ilustra" />
+                    <img src="assets/img/ilustra.svg" alt="Ilustra" />
                     <div class="row">
                         <div class="col-lg-12 col-xs-10 col-xs-offset-1">
                             <h2 class="section-heading">{{ $t('page.about_the_event') }}</h2>
@@ -448,25 +448,25 @@
                     <div class="col-lg-7">
                         <div class="row local-photos">
                             <div class="col-lg-6">
-                                <img src="/assets/img/local-01.png" class="img-responsive" alt="Foto do local">
+                                <img src="assets/img/local-01.png" class="img-responsive" alt="Foto do local">
                             </div>
                             <div class="col-lg-6">
-                                <img src="/assets/img/local-03.png" class="img-responsive" alt="Foto do local">
+                                <img src="assets/img/local-03.png" class="img-responsive" alt="Foto do local">
                             </div>
                         </div>
                         <div class="row local-photos">
                             <div class="col-lg-6">
-                                <img src="/assets/img/local-04.png" class="img-responsive" alt="Foto do local">
+                                <img src="assets/img/local-04.png" class="img-responsive" alt="Foto do local">
                             </div>
                             <div class="col-lg-6">
-                                <img src="/assets/img/local-05.png" class="img-responsive" alt="Foto do local">
+                                <img src="assets/img/local-05.png" class="img-responsive" alt="Foto do local">
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-5 col-xs-10">
                         <div class="row">
 
-                            <a href="https://www.google.com.br/maps/place/Teatro+Shopping+Frei+Caneca/@-23.5539296,-46.6551045,17z/data=!3m1!4b1!4m2!3m1!1s0x94ce58353ca914ff:0x4af6638b77d81ab6?hl=en" target="_blank"><img src="/assets/img/mapa.png" class="img-responsive mapa" alt="Mapa do Evento"></a>
+                            <a href="https://www.google.com.br/maps/place/Teatro+Shopping+Frei+Caneca/@-23.5539296,-46.6551045,17z/data=!3m1!4b1!4m2!3m1!1s0x94ce58353ca914ff:0x4af6638b77d81ab6?hl=en" target="_blank"><img src="assets/img/mapa.png" class="img-responsive mapa" alt="Mapa do Evento"></a>
                         </div>
                     </div>
                 </div>
@@ -521,20 +521,20 @@
             </div>
             <div class="row sponsorships-line">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <a href="https://www.sprinklr.com/"><img src="/assets/img/sprinklr.png" class="img-responsive" alt="Sprinklr" /></a>
+                    <a href="https://www.sprinklr.com/"><img src="assets/img/sprinklr.png" class="img-responsive" alt="Sprinklr" /></a>
                 </div>
                 <div class="col-lg-4">
-                    <a href="http://www.uolhost.uol.com.br/"><img src="/assets/img/uol_host.png" class="img-responsive" alt="Uol Host" /></a>
+                    <a href="http://www.uolhost.uol.com.br/"><img src="assets/img/uol_host.png" class="img-responsive" alt="Uol Host" /></a>
                 </div>
             </div>
             <div class="row sponsorships-line">
                 <div class="col-lg-2 col-lg-offset-5">
-                    <a href="http://vizir.com.br/"><img src="/assets/img/vizir.png" class="img-responsive" alt="Vizir" /></a>
+                    <a href="http://vizir.com.br/"><img src="assets/img/vizir.png" class="img-responsive" alt="Vizir" /></a>
                 </div>
             </div>
             <div class="row sponsorships-line">
                 <div class="col-lg-2 col-lg-offset-5">
-                    <a href="http://wisepix.com.br/"><img src="/assets/img/wisepix.png" class="img-responsive" alt="Wisepix" /></a>
+                    <a href="http://wisepix.com.br/"><img src="assets/img/wisepix.png" class="img-responsive" alt="Wisepix" /></a>
                 </div>
             </div>
         </div>
@@ -547,16 +547,16 @@
             </div>
             <div class="row sponsorships-line sponsorships-apoiadores">
                 <div class="col-lg-2 col-lg-offset-2">
-                    <a href="http://blog.netcoders.com.br/"><img src="/assets/img/netcoders.png" class="img-responsive" alt="Net Coders" /></a>
+                    <a href="http://blog.netcoders.com.br/"><img src="assets/img/netcoders.png" class="img-responsive" alt="Net Coders" /></a>
                 </div>
                 <div class="col-lg-2">
-                    <a href="https://auth0.com/"><img src="/assets/img/auth0.png" class="img-responsive" alt="Auth0" /></a>
+                    <a href="https://auth0.com/"><img src="assets/img/auth0.png" class="img-responsive" alt="Auth0" /></a>
                 </div>
                 <div class="col-lg-2">
-                    <a href="https://braziljs.org/"><img src="/assets/img/braziljs.png" class="img-responsive" alt="Brazil JS" /></a>
+                    <a href="https://braziljs.org/"><img src="assets/img/braziljs.png" class="img-responsive" alt="Brazil JS" /></a>
                 </div>
                 <div class="col-lg-2">
-                    <a href="http://devnaestrada.com.br/"><img src="/assets/img/dev-na-estrada.png" class="img-responsive" alt="Dev na Estrada" /></a>
+                    <a href="http://devnaestrada.com.br/"><img src="assets/img/dev-na-estrada.png" class="img-responsive" alt="Dev na Estrada" /></a>
                 </div>
             </div>
         </div>
@@ -653,23 +653,23 @@
         </div>
     </footer>
     <!-- jQuery -->
-    <script src="/assets/js/jquery.js"></script>
+    <script src="assets/js/jquery.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="/assets/js/bootstrap.min.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
 
     <!-- Plugin JavaScript -->
-    <script src="/assets/js/jquery.easing.min.js"></script>
-    <script src="/assets/js/jquery.fittext.js"></script>
-    <script src="/assets/js/wow.min.js"></script>
-    <script src="/assets/js/three.min.js"></script>
+    <script src="assets/js/jquery.easing.min.js"></script>
+    <script src="assets/js/jquery.fittext.js"></script>
+    <script src="assets/js/wow.min.js"></script>
+    <script src="assets/js/three.min.js"></script>
 
     <!-- Custom Theme JavaScript -->
-    <script src="/assets/js/creative.js"></script>
-    <script src="/assets/js/script.js"></script>
+    <script src="assets/js/creative.js"></script>
+    <script src="assets/js/script.js"></script>
 
     <!-- Vue.js app -->
-    <script src="/assets/js/app.js"></script>
+    <script src="assets/js/app.js"></script>
 </body>
 
 </html>
