--- a/index.html
+++ b/index.html
@@ -36,6 +36,16 @@
 </head>
 
 <body id="page-top" v-cloak>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-79505950-1', 'auto');
+      ga('send', 'pageview');
+
+    </script>
 
     <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
@@ -388,10 +398,10 @@
 
     <section id="schedule">
         <div class="container">
-          <div class="row page-header text-center" id="calendar">
-              <h1><mark><span class="fa fa-calendar"></span></mark></h1>
-              <h1>Agenda do <mark>Evento AO VIVO</mark></h1>
-          </div>
+            <div class="row page-header text-center" id="calendar">
+                <h1><mark><span class="fa fa-calendar"></span></mark></h1>
+                <h1>Agenda do <mark>Evento AO VIVO</mark></h1>
+            </div>
             <div class="schedule">
                 <nav>
                     <ul>
